--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.inpre">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name = "com.google.android.gm.permission.AUTO_SENDTO" />
 
     <application
         android:name=".app.App"
